Updating index.html

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,7 +13,8 @@
       <p id="help">
         Movement: [W, A, S, D] + left and right arrows for turning<br>
         Field of View: +fov = I, -fov = O <br>
-        Ray count: +rays = K, -rays = L <br>
+        Ray count: +rays = K, -rays = L <br><br><br>
+        The project can be found on <a href="https://github.com/srdja/raycaster-demo">Github</a>
       </p>
     </div>
     <script src="js/goog/base.js"></script>
